package engine.events;

/**
 * Category of the event.
 */
public enum EventCategory {
    None,
    Application,
    Input,
    Keyboard,
    Mouse,
    MouseButton,
}
