package engine.events;

/**
 * Type of event.
 */
public enum EventType {
    None,
    MouseButtonPressed,
    MouseButtonReleased,
    MouseMoved,
    MouseScrolled,
    WindowResized,
    WindowClosed,
    WindowHasFocus,
    WindowLostFocus,
    KeyPressed,
    KeyReleased,
}
