package engine.events;

public enum MouseButton {
    Left,
    Right,
    Middle,
}
