@startuml

!theme reddress-lightorange
footer Event system

enum EventType {
    None
    MouseButtonPressed
    MouseButtonReleased
    MouseScrolled
    WindowResized
    WindowClosed
    WindowHasFocus
    WindowLostFocus
    KeyTyped
    KeyPressed
    KeyReleased
}

enum EventCategory {
    None
    Application
    Input
    Keyboard
    Mouse
    MouseButton
}

abstract class Event {
    {abstract} + EventType getEvent()
    {abstract} + EventType getCategory()
    {abstract} + String toString()
    + boolean isCategory(EventCategory category)
}

enum MouseButton {
    Left
    Right
    Middle
}

enum KeyCode {
    ...
}

class MouseButtonEvent extends Event {
    - MouseButton button
    # MouseButtonEvent(MouseButton button)
    + MouseButton GetButton()
}

class MouseButtonPressedEvent extends MouseButtonEvent {
    + MouseButtonPressedEvent(MouseButton button)
    + EventType getEvent()
    + EventType getCategory()
    + String toString()
}

class MouseButtonReleasedEvent extends MouseButtonEvent {
    + MouseButtonReleasedEvent(MouseButton button)
    + EventType getEvent()
    + EventType getCategory()
    + String toString()
}

class MouseMovedEvent extends Event {
    - float x
    - float y
    + MouseMovedEvent(float x, float y)
    + float getX()
    + float getY()
    + EventType getEvent()
    + EventType getCategory()
    + String toString()
}

class MouseScrolledEvent extends Event {
    - float xOffset
    - float yOffset
    + MouseScrolledEvent(float xOffset, float yOffset)
    + float getXOffset()
    + float getYOffset()
    + EventType getEvent()
    + EventType getCategory()
    + String toString()
}

class KeyEvent extends Event {
    - KeyCode keycode
    # KeyEvent(KeyCode keycode)
    + KeyCode getKeycode()
}

class KeyPressedEvent extends KeyEvent {
    - int repeatCount
    + KeyKeyPressedEvent(int keycode, int repeatCount)
    + int getRepeatCount()
    + EventType getEvent()
    + EventType getCategory()
    + String toString()
}

class KeyReleasedEvent extends KeyEvent {
    + KeyKeyReleasedEvent(int keycode)
    + EventType getEvent()
    + EventType getCategory()
    + String toString()
}

class WindowResizedEvent extends Event {
    - int height
    - int width
    + WindowResizedEvent(int height, int width)
    + int getHeight()
    + int getWidth()
    + EventType getEvent()
    + EventType getCategory()
    + String toString()
}
class WindowClosedEvent extends Event {
    + WindowClosedEvent()
    + EventType getEvent()
    + EventType getCategory()
    + String toString()
}

class WindowHasFocus extends Event {
    + WindowHasFocus()
    + EventType getEvent()
    + EventType getCategory()
    + String toString()
}

class WindowLostFocus extends Event {
    + WindowLostFocus()
    + EventType getEvent()
    + EventType getCategory()
    + String toString()
}

KeyEvent -- KeyCode
EventType -- Event
EventCategory -- Event
MouseButton -- MouseButtonEvent

@enduml
